--- a/app/globals.css
+++ b/app/globals.css
@@ -1,34 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  background-color: #4d425f;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: darken;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 8px;
+  margin: 20px;
+  
+ }
